# BenthicCam

./: Dockerfile  README.md
.github/workflows/: deploy.yml
Notes/: Docker.md
app/: main.py  pyproject.toml
app/libraries/CamControl/: CMakeLists.txt
app/libraries/CamControl/CamControlLib/: CMakeLists.txt  Camera.h  CameraFactory.cpp  CameraFactory.h  SheenCam.cpp  SheenCam.h
app/libraries/CamControl/CamControlTests/: CMakeLists.txt
app/libraries/CamControl/CamControlTests/Tests/: SheenCam_Tests.cpp
app/libraries/CamControl/GeneratorFiles/: Camera.xml  CameraFactory.xml  SheenCam.xml
app/static/: index.html  register_service
notes/: Docker.md
